[ticket/10734] Moved style elements and fixed minor bugs
Moved color related style elements to colours.css and other elements to
common.css
Also added an empty display for corners span.
Removed unwanted space in mcp_topic
Removed DS_Store

PHPBB-10734

--- a/phpBB/styles/prosilver/theme/colours.css
+++ b/phpBB/styles/prosilver/theme/colours.css
@@ -47,34 +47,26 @@ hr {
 	background-color: #12A3EB;
 	background-image: url("./images/bg_header.gif");
 	color: #FFFFFF;
-	border-radius: 7px;
 }
 
 .navbar {
 	background-color: #cadceb;
-	border-radius: 7px;
 }
 
 .forabg {
 	background-color: #0076b1;
 	background-image: url("./images/bg_list.gif");
-	border-radius: 7px;
 }
 
 .forumbg {
 	background-color: #12A3EB;
 	background-image: url("./images/bg_header.gif");
-	border-radius: 7px;
 }
 
 .panel {
 	background-color: #ECF1F3;
 	color: #28313F;
-	border-radius: 7px;
-}
-
-.post {
-	border-radius: 7px;
+	
 }
 
 .post:target .content {
@@ -871,7 +863,6 @@ ul.cplist {
 
 #cp-main .panel {
 	background-color: #F9F9F9;
-	padding: 5px 10px;
 }
 
 #cp-main .pm {
